Corrects some documentation, and some code.
